--- a/views/dogs/index.ejs
+++ b/views/dogs/index.ejs
@@ -13,6 +13,9 @@
         <% dogs.forEach(dog=> { %>
             <li>
                 <a href="/dogs/<%= dog._id %>"><%= dog.name %></a>
+                <form class="delete-form" action="/dogs/<%= dog._id %>?_method=DELETE" method="POST">
+                    <button class="delete-btn" type="submit">Delete</button>
+                </form>
             </li>
             <% }); %>
     </ul>
