--- a/views/dogs/show.ejs
+++ b/views/dogs/show.ejs
@@ -12,6 +12,7 @@
         <h2><%= dog.name %> Info</h2>
         <p><strong>Name: </strong><%= dog.name %></p>
         <p><strong>Breed: </strong><%= dog.breed %></p>
+        <a href="/dogs/<%= dog._id %>/edit">Click here to Edit <% dog.name %> </a>
     </div>
 
     <div class="nav-links">
